# philosophers

./: CMakeLists.txt  main.cpp  philosopher.cpp  philosopher.h  tableware.cpp  tableware.h  waiter.cpp  waiter.h
